force-app/main/default/objects/sugati__Target_Actual_Number__c/sugati__Target_Actual_Number__c.object-meta.xml
<CustomObject>
    <label>Target And Commission Actual Number</label>
    <nameField>
        <displayFormat>TCAN-{0000000000}</displayFormat>
        <label>Target And Commission Actual Number ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Target And Commission Actual Numbers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>