force-app/main/default/objects/sugati__Target_Actual_Number__c/fields/sugati__TAN_Actual_Week_Number__c.field-meta.xml
<CustomField>
    <fullName>sugati__TAN_Actual_Week_Number__c</fullName>
    <label>Actual Week Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>