force-app/main/default/objects/sugati__Target_Actual_Number__c/fields/sugati__TAN_Archived__c.field-meta.xml
<CustomField>
    <fullName>sugati__TAN_Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>