force-app/main/default/objects/sugati__Target_Actual_Number__c/fields/sugati__TAN_Booking_Owner__c.field-meta.xml
<CustomField>
    <fullName>sugati__TAN_Booking_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Target_Actual_Numbers</relationshipName>
    <type>Lookup</type>
</CustomField>