force-app/main/default/objects/sugati__Target_Actual_Number__c/fields/sugati__TAN_Commission__c.field-meta.xml
<CustomField>
    <fullName>sugati__TAN_Commission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commission</label>
    <referenceTo>sugati__Target__c</referenceTo>
    <relationshipLabel>Target And Commission Actual Numbers (Commission)</relationshipLabel>
    <relationshipName>Target_And_Commission_Actual_Numbers</relationshipName>
    <type>Lookup</type>
</CustomField>