force-app/main/default/objects/sugati__Target_Actual_Number__c/fields/sugati__TAN_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sugati__TAN_Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Target_Actual_Numbers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>