force-app/main/default/objects/sugati__Target_Actual_Number__c/fields/sugati__TAN_Opportunity_Commission__c.field-meta.xml
<CustomField>
    <fullName>sugati__TAN_Opportunity_Commission__c</fullName>
    <formula>sugati__TAN_Opportunity__r.sugati__O_Sales_Commission1__c /  sugati__TAN_Opportunity__r.sugati__O_Commission_ER__r.sugati__ER_Exchange_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>