force-app/main/default/objects/sugati__Target_Actual_Number__c/fields/sugati__TAN_Opportunity_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__TAN_Opportunity_Return_Date__c</fullName>
    <formula>sugati__TAN_Opportunity__r.sugati__O_Return_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Return Date</label>
    <type>Date</type>
</CustomField>