force-app/main/default/objects/sugati__Target_Actual_Number__c/fields/sugati__TAN_Target__c.field-meta.xml
<CustomField>
    <fullName>sugati__TAN_Target__c</fullName>
    <label>Target</label>
    <referenceTo>sugati__Target__c</referenceTo>
    <relationshipName>Target_Actual_Numbers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>